# wiki-scripts

./: README.md  ruff.toml
.github/: CODEOWNERS
.github/workflows/: check-sync-conflicts.yml  pylint.yml
check_kernel/: Readme.md  check_parts.sh
iio/iio_jesd204_fsm_sync/: CMakeLists.txt  README.md  iio_jesd204_fsm_sync.c
iio/iio_misc/: CMakeLists.txt  iio_misc.c
intel/: adi_make_arria10.sh  adi_make_cyclone5.sh  adi_make_stratix10.sh
linux/: adintool.sh  build_nios2_kernel_image.sh  build_rpi_kernel_image.sh  build_socfpga_kernel_image.sh  build_zynq_kernel_image.sh  build_zynqmp_kernel_image.sh
linux/drivers/adin1100/: .gitignore  CMakeLists.txt  adin10spe_phy.c  adin10spe_phy.h  adin10spe_phy_tool.c  adin1100.c  adin1100.h  adin1100_tool.c
no-OS/: zynqmp_ddr_patch.sh
sdcard/: compare_img_with_sdcard.sh
utils/cloudsmith_utils/: README.md  __init__.py  cloudsmith_helper.py  upload_to_cloudsmith.py
versal_boot_bin/: build_versal_boot_bin.sh
zynq_boot_bin/: build_boot_bin.ps1  build_boot_bin.sh
zynqmp_boot_bin/: build_zynqmp_boot_bin.sh
